Make code compile